<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sub_font">font:</string>
    <string name="sub_position_v">position:</string>
    <string name="sub_color">color:</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_blue">Blue</string>
    <string name="sub_switch">switch:</string>
    <string name="sub_no_subtitle">No subtitle!</string>
    <string name="cannot_switch_track">Can not switch audio track when seeking!</string>
    <string name="str_no_file">No file Found!</string>
    <string name="str_exit">exit</string>
    <string name="setting_resume">Resume Mode</string>
    <string name="setting_playmode">Play Mode</string>
    <string name="setting_playmode_repeatall">Repeat All</string>
    <string name="setting_playmode_repeatone">Repeat One</string>
    <string name="setting_audiooption">Audio Option</string>
    <string name="setting_soundtrack">Sound Track</string>
    <string name="setting_audiotrack">Audio Track</string>
    <string name="setting_videotrack">Video Track</string>
    <string name="setting_audio_offset">Audio Offset</string>
    <string name="setting_dtsdrc">DTS DRC</string>
    <string name="setting_audiodtsapresent">Audio DTS Apresentation</string>
    <string name="setting_audiodtsasset">Audio DTS Asset</string>
    <string name="setting_soundtrack_stereo">Stereo</string>
    <string name="setting_soundtrack_lmono">Left Mono</string>
    <string name="setting_soundtrack_rmono">Right Mono</string>
    <string name="setting_soundtrack_lrmix">Sound Mixing</string>
    <string name="setting_subtitle">Subtitle</string>
    <string name="setting_chapter">Chapter</string>
    <string name="subtitle_insub">INSUB</string>
    <string name="setting_displaymode">Display Mode</string>
    <string name="setting_displaymode_normal">Normal</string>
    <string name="setting_displaymode_normal_noscaleup">No Scale Up</string>
    <string name="setting_displaymode_fullscreen">Full Screen</string>
    <string name="setting_displaymode_original">Original</string>
    <string name="setting_brightness">Brightness</string>
    <string name="setting_3d_mode">Play 3D Mode</string>
    <string name="setting_3d_diable">OFF</string>
    <string name="setting_3d_grating_open">Open Grating</string>
    <string name="setting_3d_grating_close">Close Grating</string>
    <string name="setting_3d_auto">AUTO</string>
    <string name="setting_3d_lr">L/R</string>
    <string name="setting_3d_bt">B/T</string>
    <string name="setting_3d_fp">Frame Packing</string>
    <string name="setting_3d_2d_l">3D-2D-L</string>
    <string name="setting_3d_2d_r">3D-2D-R</string>
    <string name="setting_3d_2d_t">3D-2D-T</string>
    <string name="setting_3d_2d_b">3D-2D-B</string>
    <string name="setting_3d_2d_auto1">3D-2D-AUTO1</string>
    <string name="setting_3d_2d_auto2">3D-2D-AUTO2</string>
    <string name="setting_2d_3d">2D-3D</string>
    <string name="setting_3d_field_depth">Field Depth</string>
    <string name="setting_3d_auto_switch">Auto Switch</string>
    <string name="setting_3d_lr_switch">LR Switch</string>
    <string name="setting_3d_tb_switch">TB Switch</string>
    <string name="setting_3d_full_off">scale2 off</string>
    <string name="setting_3d_lr_full">L/R Half2Full</string>
    <string name="setting_3d_tb_full">T/B Half2Full</string>
    <string name="setting_moreset">More Setting</string>
    <string name="setting_switch_codec">Switch Codec</string>
    <string name="setting_codec_amlogicplayer">Amlogic Player</string>
    <string name="setting_codec_omx">OMX</string>
    <string name="setting_switch_VR">Switch VR</string>
    <string name="setting_VR_full">Full</string>
    <string name="setting_VR_middle">Middle</string>
    <string name="setting_VR_left">Left</string>
    <string name="setting_VR_right">Right</string>
    <string name="setting_VR_montage">Montage(L/R)</string>
    <string name="setting_audio_settings">Audio Settings</string>
    <string name="setting_more">...</string>

    <string name="confirm_codec_set">Codec Set</string>
    <string name="codec_set_msg">Some video can not play if codec been changed, confirm to switch codec?</string>

    <string name="setting_play_chapters">Play Chapters</string>
    <string name="setting_chapters">Chapters</string>
    <string name="app_name">MoviePlayer</string>
    <string name="main_activity">MoviePlayer</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_time_null">00:00:00</string>
    <string name="str_resume_play">Resume this video from last position?</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_about">About</string>
    <string name="str_file_information">File Information</string>
    <string name="str_file_name">Name</string>
    <string name="str_file_format">Format</string>
    <string name="str_file_size">Size</string>
    <string name="str_file_resolution">Resolution</string>
    <string name="str_file_duration">Duration</string>
    <string name="setting_audiochannel">Audio Chanel</string>
    <string name="str_left_auidochannel">Left Mono</string>
    <string name="str_right_auidochannel">Right Mono</string>
    <string name="str_stereo_auidochannel">Stereo</string>
    <string name="file_have_no_audio">file have no audio</string>


    <string name="setting_ttPage">Setting_Teletext_Page</string>
    <string name="gotoPage">Goto_Page</string>
    <string name="nextPage">NextPage</string>
    <string name="nextSubPage">NextSubPage</string>
    <string name="gohome">GoHome</string>
    <string name="operation_instruciton">Instruction: page range:100-899!</string>

    <string name="alertdialog_title">please choose osd picture</string>
    <string name="memory_device_str">Internal Memory </string>
    <string name="sdcard_device_str">Local Disk</string>
    <string name="ext_sdcard_device_str">External Storage Card</string>
    <string name="sata_device_str">SATA</string>
    <string name="usb_device_str">USB</string>
    <string name="cdrom_device_str">CD ROM</string>
    <string name="no_file">No Video File!</string>
    <string name="searching">Searching...</string>
    <string name="all_file">All Video Files</string>
    <string name="not_support_3d">Your device does not support 3D format!</string>

    <string name="unsupport_media">Unsupport Media</string>
    <string name="unsupport_video_format">Unsupport Video format</string>
    <string name="unsupport_audio_format">Unsupport Audio format</string>
    <string name="open_file">Open file ( </string>
    <string name="parser_file">Parser file ( </string>
    <string name="failed"> ) failed</string>
    <string name="decode_init_failed">Decode Init failed</string>
    <string name="file_have_no_video">file have no video</string>
    <string name="play_video_error">video file error</string>
    <string name="play_audio_error">audio file error</string>
    <string name="play_subtitle_error">subtitle file error</string>
    <string name="set_playback_without_video">set playback without video</string>
    <string name="set_playback_without_audio">set playback without audio</string>
    <string name="not_authorized_to_play">This player is not authorized to play this video</string>
    <string name="unsupport_video_codec">Unsupport Video codec</string>
    <string name="unsupport_ff_fb">Unsupport ff/fb</string>
    <string name="seek_out_of_range">Seek out of range</string>
    <string name="unknow_error">Unknow Error</string>
    <string name="wait_for_scan">Media scanning, please try again a few time later.</string>
    <string name="audio_dec_enable">Invalid License,audio can not decode to output.</string>
    <string name="dts_hps_unsupport">DTSHD_Headphone_Stream Unssport,Unless Insert Headphone.</string>
    <string name="unsupport_video_size">Unsupport Bitate</string>
    <string name="not_support_video_exit">Not support video format, Exit!</string>
    <string name="not_support_video_next">Not support video format, Next Video!</string>
</resources>
