<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="bottom" 
    android:background="@color/background"> 
    
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/Frame_more"
	    	android:gravity="center"
	    	android:orientation="horizontal" android:clipChildren="false"
	    	android:layout_alignParentBottom="true" 
	    	android:layout_gravity="bottom" 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="match_parent">
	    <LinearLayout android:layout_width="348dp" 
	    android:layout_height="304dp" 
	    android:id="@+id/LinearLayout_sub" 
	    android:orientation="vertical" 
	    android:background="@drawable/minding_bk" 
	    android:layout_gravity="center">
     
			<LinearLayout android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_title" 
			android:layout_gravity="center_horizontal">
				<TextView android:id="@+id/TextView01" 
				android:gravity="center" 
				android:layout_height="56dp" 
				android:textSize="24px" 
				android:layout_width="348dp" 
				android:text="@string/setting_subtitle" 
				android:textColor="@drawable/white">
			 	</TextView>
			</LinearLayout>
	
			<LinearLayout android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_switch" 
			android:layout_gravity="center_horizontal">
				<TextView android:id="@+id/TextView01" 
				android:gravity="left|center" 
				android:layout_width="86dp" 
				android:layout_height="60dp" 
				android:textSize="24px" 
				android:text="@string/sub_switch" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black">
			 	</TextView>
				<ImageButton android:id="@+id/switch_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			 	</ImageButton>
		     	<TextView android:layout_width="94dp" 
		     	android:gravity="center" 
		     	android:layout_height="60dp" 
		     	android:id="@+id/sub_swith111" 
		     	android:textSize="24px" 
		     	android:textColor="@drawable/black">
		    	</TextView>
		     	<ImageButton android:id="@+id/switch_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		     	 </ImageButton>
			</LinearLayout>
    
		    <LinearLayout android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:id="@+id/sub_font" 
		    android:layout_gravity="center_horizontal">
				<TextView android:layout_width="86dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24px" 
				android:text="@string/sub_font" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/font_title">
			 	</TextView>
				<ImageButton android:id="@+id/font_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			 	</ImageButton>
		     	<TextView android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24px" 
		     	android:id="@+id/sub_font111" 
		     	android:textColor="@drawable/black">
		    	</TextView>
		     	<ImageButton android:id="@+id/font_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		     	 </ImageButton>
			</LinearLayout>
	
			<LinearLayout android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_color" 
			android:layout_gravity="center_horizontal">
				<TextView android:layout_width="86dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24px" 
				android:text="@string/sub_color" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/color_title">
			 	</TextView>
				<ImageButton android:id="@+id/color_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			 	</ImageButton>
		     	<TextView android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24px" 
		     	android:id="@+id/sub_color111" 
		     	android:textColor="@drawable/black">
		    	</TextView>
		     	<ImageButton android:id="@+id/color_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		     	 </ImageButton>
			</LinearLayout>
	
			<LinearLayout android:id="@+id/sub_ok_on" 
			android:layout_height="match_parent" 
			android:layout_width="match_parent">
			     <Button android:id="@+id/button_ok" 
			     android:text="@string/str_ok" 
			     android:layout_width="150dp" 
			     android:layout_gravity="center" 
			     android:layout_marginLeft="30dp" 
			     android:layout_height="50dp" 
			     android:textSize="24px" 
			     android:textColor="@drawable/black">
			      </Button>
				<Button android:id="@+id/button_canncel" 
				android:text="@string/str_cancel" 
				android:layout_width="150dp" 
				android:layout_gravity="center" 
				android:layout_height="50dp" 
				android:textSize="24px" 
				android:textColor="@drawable/black">
				  </Button>
			</LinearLayout>
		</LinearLayout>
		
	    <LinearLayout android:id="@+id/LinearLayout_other" 
			android:orientation="vertical" 
			android:background="@drawable/minding_bk" 
			android:layout_height="304dp" 
			android:layout_width="348dp" 
			android:layout_gravity="center">
		  <TextView android:layout_width="wrap_content" 
			android:id="@+id/more_title" 
			android:layout_gravity="center" 
			android:layout_height="56dp" 
			android:gravity="center" 
			android:textColor="@drawable/white" 
			android:textSize="24px"></TextView>
		  <ListView android:id="@+id/AudioListView" 
			  android:layout_width="326dp" 
			  android:layout_height="232dp" 
			  android:layout_marginLeft="12dp" 
			  android:divider="@color/background" 
			  android:cacheColorHint="#00000000">
		  </ListView>
		</LinearLayout>
		
	    <LinearLayout	
		android:id="@+id/dialog_layout"
		android:orientation="vertical"
		android:background="@drawable/dialog_bk" 
		android:layout_width="520dp"
		android:layout_height="300dp"
		android:layout_gravity="center">
		
		<TextView
			android:id="@+id/info_title" 
			android:layout_gravity="center" 
			android:layout_width="wrap_content" 
			android:layout_height="55dp" 
			android:gravity="center" 
			android:textColor="@drawable/white" 
			android:textSize="20px">
		</TextView>
		
		<LinearLayout	
		    android:orientation="vertical"
		    android:layout_width="500dp"
		    android:layout_height="175dp"
		    android:layout_gravity="center"
		    android:layout_marginTop="10dp"
		    android:layout_marginLeft="10dp">
		
		    <TextView
			    android:id="@+id/filename" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px">
		    </TextView>
		    <TextView
			    android:id="@+id/filetype" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/filesize" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/resolution" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/duration" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		</LinearLayout>
		<LinearLayout	
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <Button
			    android:id="@+id/info_ok" 
			    android:layout_gravity="center" 
			    android:layout_width="160dp" 
			    android:layout_height="wrap_content" 
			    android:gravity="center" 
			    android:textColor="@drawable/black" 
			    android:textSize="20px">
		    </Button>
		</LinearLayout>
	    </LinearLayout>
		
		<com.subtitleview.SubtitleView
	    	android:id="@+id/subTitle_more"
	    	android:layout_height = "wrap_content"
	    	android:layout_width ="fill_parent"
	    	android:gravity="center"
	    	android:textStyle="bold"
	    	android:paddingLeft = "7dip"
	    	android:layout_gravity="bottom|center" 
	    	android:paddingTop="200dip" 
	    	android:minHeight="310dip">
	    </com.subtitleview.SubtitleView>
	    
	</FrameLayout>
	
   
    
    <LinearLayout
	    android:orientation="horizontal" 
	    android:id="@+id/morebarLayout" 
	    android:layout_gravity="bottom" 
	    android:background="@color/background" 
	    android:layout_height="70dp" 
	    android:layout_width="fill_parent">
	
		<ImageButton android:id="@+id/ImageButton07" 
		android:src="@drawable/barback" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
		<ImageButton android:id="@+id/ImageButton01" 
		android:src="@drawable/resume_play" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
		<ImageButton android:id="@+id/ImageButton02" 
		android:src="@drawable/playmode" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
		<ImageButton android:id="@+id/ImageButton03" 
		android:src="@drawable/audio_trace" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
		<ImageButton android:id="@+id/ImageButton04" 
		android:src="@drawable/subtitle" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
		<ImageButton android:id="@+id/ImageButton05" 
		android:src="@drawable/display" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
		<ImageButton android:id="@+id/ImageButton06" 
		android:src="@drawable/brightness" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_weight="1">
		</ImageButton>
    	<ImageButton android:id="@+id/ImageButton08" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" android:src="@drawable/mediainfo">
    	</ImageButton>
</LinearLayout>
</LinearLayout>
