<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/BaseLayout2" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/transparent_background"> 
    
    <VideoView
        android:id="@+id/video_view"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </VideoView>

    <LinearLayout 
        android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/LinearLayout_sub" 
	    android:orientation="vertical" 
	    android:background="@drawable/minding_bk" 
	    android:layout_gravity="center"
	    android:gravity="center">
	    
	    <LinearLayout 
	        android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_title" 
			android:layout_gravity="center_horizontal">
			
			<TextView
			    android:id="@+id/TextView01" 
				android:gravity="center" 
				android:layout_height="56dp" 
				android:textSize="24px" 
				android:layout_width="wrap_content" 
				android:text="@string/setting_subtitle" 
				android:textColor="@drawable/white">
			</TextView>
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_switch" 
			android:orientation="horizontal" 
			android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
			
			<TextView
			    android:id="@+id/TextView01" 
				android:gravity="left|center" 
				android:layout_width="86dp" 
				android:layout_height="60dp" 
				android:textSize="24px" 
				android:text="@string/sub_switch" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black">
			 </TextView>
			 
			 <ImageButton
			    android:id="@+id/switch_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:gravity="center" 
		     	android:layout_height="60dp" 
		     	android:id="@+id/sub_swith111" 
		     	android:textSize="24px" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    
		    <ImageButton 
		        android:id="@+id/switch_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:id="@+id/sub_font" 
		    android:orientation="horizontal" 
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
		    
		    <TextView
		        android:layout_width="86dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24px" 
				android:text="@string/sub_font" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/font_title">
			</TextView>
			<ImageButton 
			    android:id="@+id/font_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24px" 
		     	android:id="@+id/sub_font111" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    <ImageButton 
		        android:id="@+id/font_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_color" 
			android:orientation="horizontal" 
			android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
			
			<TextView 
			    android:layout_width="86dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24px" 
				android:text="@string/sub_color" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/color_title">
			</TextView>
			
			<ImageButton 
			    android:id="@+id/color_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24px" 
		     	android:id="@+id/sub_color111" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    
		    <ImageButton 
		        android:id="@+id/color_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/sub_ok_on" 
		    android:orientation="horizontal" 
			android:layout_height="match_parent" 
			android:layout_width="match_parent"
			android:layout_gravity="center" 
			android:gravity="center" >
			
			<Button 
			    android:id="@+id/button_ok" 
			    android:text="@string/str_ok" 
			    android:layout_width="120dp" 
			    android:layout_gravity="center" 
			    android:layout_marginRight="20dp" 
			    android:layout_height="wrap_content" 
			    android:textSize="24px" 
			    android:textColor="@drawable/black">
			</Button>
			
			<Button 
			    android:id="@+id/button_canncel" 
				android:text="@string/str_cancel" 
				android:layout_width="120dp" 
				android:layout_gravity="center" 
				android:layout_height="wrap_content" 
				android:textSize="24px" 
				android:textColor="@drawable/black">
			</Button>
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/LinearLayout_other" 
	    android:orientation="vertical" 
	    android:background="@drawable/minding_bk" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content" 
	    android:layout_gravity="center"
	    android:gravity="center">
	    <TextView 
	        android:layout_width="wrap_content" 
			android:id="@+id/more_title" 
			android:layout_gravity="center" 
			android:layout_height="56dp" 
			android:gravity="center" 
			android:textColor="@drawable/white" 
			android:textSize="24px">
		</TextView>
		
		<ListView 
		    android:id="@+id/AudioListView" 
		    android:layout_width="340dp" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="4dp" 
		    android:layout_marginRight="4dp" 
		    android:layout_marginBottom="4dp" 
		    android:divider="@color/background" 
		    android:cacheColorHint="#00000000"
		    android:gravity="center">
		</ListView>
	</LinearLayout>
	
	<LinearLayout	
		android:id="@+id/dialog_layout"
		android:orientation="vertical"
		android:background="@drawable/dialog_bk" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center">
		
		<TextView
			android:id="@+id/info_title" 
			android:layout_gravity="center" 
			android:layout_width="wrap_content" 
			android:layout_height="54dp" 
			android:layout_marginLeft="60dp" 
			android:layout_marginRight="60dp"
			android:gravity="center" 
			android:textColor="@drawable/white" 
			android:textSize="20px">
		</TextView>
		
		<LinearLayout	
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
		
		    <TextView
			    android:id="@+id/filename" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px">
		    </TextView>
		    <TextView
			    android:id="@+id/filetype" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/filesize" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/resolution" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/duration" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18px"
			    android:layout_marginTop="2dp">
		    </TextView>
		</LinearLayout>
		<LinearLayout	
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="52dp">
		    <Button
			    android:id="@+id/info_ok" 
			    android:layout_gravity="center" 
			    android:layout_width="120dp" 
			    android:layout_height="wrap_content" 
			    android:gravity="center" 
			    android:textColor="@drawable/black" 
			    android:textSize="20px">
		    </Button>
		</LinearLayout>
	</LinearLayout>

    <LinearLayout
	    android:orientation="vertical" 
	    android:layout_gravity="bottom" 
	    android:layout_height="wrap_content" 
	    android:layout_width="fill_parent">
	    
	    <com.subtitleview.SubtitleView
	        android:id="@+id/subTitle_more"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:paddingBottom="10dip">
	    </com.subtitleview.SubtitleView>
	    
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:id="@+id/morebarLayout" 
	        android:layout_gravity="center" 
	        android:background="@drawable/movie_play_bk" 
	        android:layout_height="wrap_content" 
	        android:layout_width="fill_parent"
	        android:gravity="center">
	        
	        <ImageButton 
	            android:id="@+id/BackBtn" 
	            android:src="@drawable/barback" 
	            android:background="@drawable/btn_button"
	            android:layout_marginLeft="4dp"
	            android:layout_height="wrap_content" 
	            android:layout_width="wrap_content" 
	            android:layout_weight="1"
	            android:gravity="center">
	        </ImageButton>
	        
	        <ImageButton 
		        android:id="@+id/ResumeBtn" 
		        android:src="@drawable/resume" 
		        android:background="@drawable/btn_button"
		        android:layout_height="wrap_content" 
		        android:layout_width="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    
		    <ImageButton
		        android:id="@+id/PlaymodeBtn" 
		        android:src="@drawable/mode" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    
		    <ImageButton
		        android:id="@+id/ChaptersBtn" 
		        android:src="@drawable/chapters" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    <!--
		    <ImageButton
		        android:id="@+id/Play3DBtn" 
		        android:src="@drawable/play_3d" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    -->
		    <ImageButton
		        android:id="@+id/ChangetrackBtn" 
		        android:src="@drawable/change_track" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    
		    <ImageButton
		        android:id="@+id/SubtitleBtn" 
		        android:src="@drawable/fondsetup" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    
		    <ImageButton 
		        android:id="@+id/DisplayBtn" 
		        android:src="@drawable/diplay" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
		    <!--
		    <ImageButton
		        android:id="@+id/BrightnessBtn" 
		        android:src="@drawable/brightness" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>
			-->
		    <ImageButton
		        android:id="@+id/AudioChannelBtn" 
		        android:src="@drawable/audio_channel" 
		        android:background="@drawable/btn_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:gravity="center">
		    </ImageButton>		    
		    <ImageButton
    	        android:id="@+id/InfoBtn" 
    	        android:layout_width="wrap_content" 
    	        android:layout_height="wrap_content" 
    	        android:layout_marginRight="4dp"
    	        android:layout_weight="1"
    	        android:src="@drawable/info"
    	        android:background="@drawable/btn_button"
    	        android:gravity="center">
    	    </ImageButton>
    	</LinearLayout>
    </LinearLayout>
</FrameLayout>
